commented some basic parts of app

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "node-telegram-bot-api": "^0.30.0",
     "telegraf": "^3.32.0",
+    "telegraf-flow": "^8.3.0",
     "telegraf-inline-menu": "^3.6.2",
     "typescript": "^3.6.3"
   },
