--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.1",
+    "node-cron": "^2.0.3",
     "node-telegram-bot-api": "^0.30.0",
     "telegraf": "^3.32.0",
     "telegraf-flow": "^8.3.0",
